--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\Camera\CutSceneEnding.cs" />
     <Compile Include="Assets\Scripts\Camera\CutSceneStarting.cs" />
     <Compile Include="Assets\Scripts\DestroyTimer.cs" />
+    <Compile Include="Assets\Scripts\Enemy\AIScript.cs" />
     <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyStats.cs" />
     <Compile Include="Assets\Scripts\HandPlacementIK.cs" />
