--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,26 +62,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Explosion.cs" />
-    <Compile Include="Assets\Scripts\AimingIKControl.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraFollow.cs" />
     <Compile Include="Assets\Scripts\Camera\CutsceneBehaviour.cs" />
     <Compile Include="Assets\Scripts\Camera\CutSceneEnding.cs" />
     <Compile Include="Assets\Scripts\Camera\CutSceneStarting.cs" />
-    <Compile Include="Assets\Scripts\DestroyTimer.cs" />
     <Compile Include="Assets\Scripts\Enemy\AIScript.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyAttack.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyStats.cs" />
     <Compile Include="Assets\Scripts\Enemy\WaveSpawner.cs" />
     <Compile Include="Assets\Scripts\Events\EventManager.cs" />
     <Compile Include="Assets\Scripts\Events\EventTriggers.cs" />
-    <Compile Include="Assets\Scripts\HandPlacementIK.cs" />
     <Compile Include="Assets\Scripts\Items\Church.cs" />
     <Compile Include="Assets\Scripts\Items\Grenade.cs" />
-    <Compile Include="Assets\Scripts\Items\Pistol.cs" />
     <Compile Include="Assets\Scripts\Items\Purchace.cs" />
     <Compile Include="Assets\Scripts\Items\TurretBehaviour.cs" />
     <Compile Include="Assets\Scripts\Items\Weapons.cs" />
+    <Compile Include="Assets\Scripts\Player\AimingIKControl.cs" />
     <Compile Include="Assets\Scripts\Player\CharacterAudioManager.cs" />
+    <Compile Include="Assets\Scripts\Player\HandPlacementIK.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerAnimations.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerControl.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
