--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,7 +61,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Explosion.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraFollow.cs" />
     <Compile Include="Assets\Scripts\CutScene\CutsceneBehaviour.cs" />
     <Compile Include="Assets\Scripts\CutScene\CutSceneEnding.cs" />
@@ -72,7 +71,9 @@
     <Compile Include="Assets\Scripts\Enemy\WaveSpawner.cs" />
     <Compile Include="Assets\Scripts\Events\EventManager.cs" />
     <Compile Include="Assets\Scripts\Events\EventTriggers.cs" />
+    <Compile Include="Assets\Scripts\Interfaces\IStats.cs" />
     <Compile Include="Assets\Scripts\Items\Church.cs" />
+    <Compile Include="Assets\Scripts\Items\Explosion.cs" />
     <Compile Include="Assets\Scripts\Items\Grenade.cs" />
     <Compile Include="Assets\Scripts\Items\Purchace.cs" />
     <Compile Include="Assets\Scripts\Items\TurretBehaviour.cs" />
